Fix jQuery link

--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
     <meta name="author" content="Pius Wong">
   </head>
   <body>
-    Word Choice v0.1
-    <script src="js/jQuery.js"></script>
+    <header>
+      Word Choice v0.1
+    </header>
+    <p class="output">
+      This is a paragraph.
+    </p>
+    <script src="js/jquery-3.1.1.js"></script>
     <script src="js/dataBuilder.js"></script>
   </body>
 </html>
