Modify data output debugging tool

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       Word Choice v0.1
     </header>
     <p class="output">
-      This is a paragraph.
+      This is a paragraph for testing data output.
     </p>
     <script src="js/jquery-3.1.1.js"></script>
     <script src="js/dataBuilder.js"></script>
