--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       This is a paragraph for testing data output.
     </p>
     <script src="js/jquery-3.1.1.js"></script>
+    <script src="js/words.js"></script>
     <script src="js/dataBuilder.js"></script>
   </body>
 </html>
