--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       Word Choice v0.1
     </header>
-    <p class="output">
+    <p class="debugOutput">
       This is a paragraph for testing data output.
     </p>
     <script src="js/jquery-3.1.1.js"></script>
