--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <script src="js/jquery-3.1.1.js"></script>
     <script src="js/words.js"></script>
     <script src="js/dataBuilder.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
