Define basic HTML/CSS for footer, main window

--- a/index.html
+++ b/index.html
@@ -40,11 +40,15 @@
       </div>
       <div class="mainWindow">
         Choices go here, and snarky final messages and scores.
+        <br\> Choice A
+        <br\> Choice B
+        <br\> Choice C
       </div>
     </main>
 
     <footer>
       <div class="achievementsButton">
+        ACHIEVEMENTS
       </div>
     </footer>
 
