Show generic choices with JS and flexbox

--- a/index.html
+++ b/index.html
@@ -38,11 +38,8 @@
           This is a paragraph for testing data output.
         </p>
       </div>
-      <div class="mainWindow">
-        Choices go here, and snarky final messages and scores.
-        <br\> Choice A
-        <br\> Choice B
-        <br\> Choice C
+      <div class="mainWindow" id="flexContainer">
+        <!--Choices go here, and snarky final messages and scores.-->
       </div>
     </main>
 
