--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div class="infoSecondary">
-        Symbol or graphic goes here? Of a book?
+        Symbol or graphic goes here? Of a book? <br> Select your path, one word at a time.
       </div>
       <div class="startOver">
         Start Over button
