Add "high score" section in Achievements

--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
     </main>
 
     <footer>
-      <div class="achievementsButton">
+      <div class="achievements">
         ACHIEVEMENTS
+      </div>
+      <div class="achievement">
+        High score: <div class="score" id="scoreHigh"></div>
       </div>
     </footer>
 
