Score sentence length and brevity

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="achievements">
         ACHIEVEMENTS
       </div>
-      <div class="achievement">
+      <div class="scores">
         High score: <div class="score" id="scoreHigh"></div>
       </div>
     </footer>
