Add 1st subscore record, for highest "book" media type

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         ACHIEVEMENTS
       </div>
       <div class="scores">
-        High score: <div class="score" id="scoreHigh"></div>
+        <div><div class="scoreHeading">Overall High Score: </div><div class="score" id="scoreHigh"></div></div>
       </div>
     </footer>
 
