Adjust aesthetics of page and score headings

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a href="http://www.pioslabs.com" title="Link to Pios Labs on the web">Pios Labs</a>
         </div>
         <div class="dateUpdated">
-          Updated November 2016
+          Updated December 2016
         </div>
       </div>
       <div class="infoSecondary">
@@ -42,7 +42,7 @@
 
     <footer>
       <div class="achievements">
-        ACHIEVEMENTS
+        ACHIEVEMENTS:
       </div>
       <div class="scores">
         <div><div class="scoreHeading">Overall High Score: </div><div class="score" id="scoreHigh"></div></div>
