Change "startOver" div to button, for keyboard focus potential

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         What's your best sentence?<br> Choose your words, one at a time.
       </div>
       <div class="startOver">
-        Start Over button
+        <button>Try Again</button>
       </div>
     </header>
 
