Add paper aesthetic via CSS only.  Change background to wood.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta lang="en" charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Word Choice | A web app for words already said.</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/paper.css">
     <meta name="description" content="This digital toy lets you choose your own path, one word at a time.  Let's see how unique your word choices really are.">
     <meta name="keywords" content="app, game, toy, storytelling, internet, English">
     <meta name="author" content="Pius Wong">
@@ -18,17 +19,17 @@
           Word Choice v0.1
         </div>
         <div class="authorship">
-          <a href="http://www.pioslabs.com" title="Link to Pios Labs on the web">Pios Labs</a>
+          A digital toy by <a href="http://www.pioslabs.com" title="Link to Pios Labs on the web">Pios Labs</a>
         </div>
         <div class="dateUpdated">
-          Updated December 2016
+          Updated January 2017
         </div>
       </div>
       <div class="infoSecondary">
         What's your best sentence?<br> Choose your words, one at a time.
       </div>
       <div class="startOver">
-        <button>Try Again</button>
+        <button class="paper">Try Again</button>
       </div>
     </header>
 
