Add unclickable paper aesthetic.

--- a/index.html
+++ b/index.html
@@ -15,18 +15,22 @@
 
     <header id="flexContainer">
       <div class="infoPrimary">
-        <div class="titleCard">
-          Word Choice v0.1
-        </div>
-        <div class="authorship">
-          A digital toy by <a href="http://www.pioslabs.com" title="Link to Pios Labs on the web">Pios Labs</a>
-        </div>
-        <div class="dateUpdated">
-          Updated January 2017
+        <div class="paper-unclickable">
+          <div class="titleCard">
+            Word Choice v0.1
+          </div>
+          <div class="authorship">
+            A digital toy by <a href="http://www.pioslabs.com" title="Link to Pios Labs on the web">Pios Labs</a>
+          </div>
+          <div class="dateUpdated">
+            Updated January 2017
+          </div>
         </div>
       </div>
       <div class="infoSecondary">
-        What's your best sentence?<br> Choose your words, one at a time.
+        <div class="paper-unclickable">
+          What's your best sentence?<br> Choose your words, one at a time.
+        </div>
       </div>
       <div class="startOver">
         <button class="paper">Try Again</button>
