Add paper aesthetic/CSS to achievements, scores, messageDisplay

--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
     </main>
 
     <footer>
-      <div class="achievements">
-        ACHIEVEMENTS:
-      </div>
-      <div class="scores">
-        <div><div class="scoreHeading">Overall High Score: </div><div class="score" id="scoreHigh"></div></div>
+      <div>
+        <div class="achievements">
+          <div class="paper-unclickable">ACHIEVEMENTS:</div>
+        </div>
+        <div class="scores paper-unclickable">
+          <div><div class="scoreHeading">Overall High Score: </div><div class="score" id="scoreHigh"></div></div>
+        </div>
       </div>
     </footer>
 
