Randomize paper aesthetic for word choices.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div class="startOver">
-        <button class="paper">Try Again</button>
+        <button class="paper paper1">Try Again</button>
       </div>
     </header>
 
