--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
 
     <header id="flexContainer">
-      <div class="infoPrimary">
+      <div class="infoPrimary" id="flexContainer">
         <div class="paper-unclickable">
           <div class="titleCard">
             Word Choice v0.1
@@ -27,7 +27,7 @@
           </div>
         </div>
       </div>
-      <div class="infoSecondary">
+      <div class="infoSecondary" id="flexContainer">
         <div class="paper-unclickable">
           What's your best sentence?<br> Choose your words, one at a time.
         </div>
