Paper now matches size of text for final sentence.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
     </header>
 
     <main>
-      <div class="messageDisplay">
+      <div id="flexContainer">
+        <div class="messageDisplay">
+        </div>
       </div>
       <div class="mainWindow" id="flexContainer">
         <!--Choices go here, and snarky final messages and scores.-->
