Aesthetics: Add color to paper active link click; no more all caps

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <footer>
       <div>
         <div class="achievements">
-          <div class="paper-unclickable">ACHIEVEMENTS:</div>
+          <div class="paper-unclickable">Achievements:</div>
         </div>
         <div class="scores paper-unclickable">
           <div><div class="scoreHeading">Overall High Score: </div><div class="score" id="scoreHigh"></div></div>
