Aesthetic: Paper around scores limited to text coverage

--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
         <div class="achievements">
           <div class="paper-unclickable">Achievements:</div>
         </div>
-        <div class="scores paper-unclickable">
-          <div><div class="scoreHeading">Overall High Score: </div><div class="score" id="scoreHigh"></div></div>
+        <div class="scoreContainer">
+          <div class="scores paper-unclickable">
+            <div><div class="scoreHeading">Overall High Score: </div><div class="score" id="scoreHigh"></div></div>
+          </div>
         </div>
       </div>
     </footer>
