Responsive design for 1024-1200px wide screen added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
       <div class="infoSecondary" id="flexContainer">
         <div class="paper-unclickable">
-          What's your best sentence?<br> Choose your words, one at a time.
+          What's your best sentence? Choose your words, one at a time.
         </div>
       </div>
       <div class="startOver">
