Responsive design: Smoother transition from 300-700px screen width

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body>
 
     <header id="flexContainer">
-      <div class="infoPrimary" id="flexContainer">
-        <div class="paper-unclickable">
+      <div class="infoPrimary">
+        <div class="paper-unclickable" id="flexContainer">
           <div class="titleCard">
             Word Choice v0.1
           </div>
