Design: Center lower scores / achievements

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
     <footer>
       <div>
-        <div class="achievements">
+        <div class="achievements" id="flexContainer">
           <div class="paper-unclickable">Achievements:</div>
         </div>
-        <div class="scoreContainer">
+        <div class="scoreContainer" id="flexContainer">
           <div class="scores paper-unclickable">
             <div><div class="scoreHeading">Overall High Score: </div><div class="score" id="scoreHigh"></div></div>
           </div>
