Animate: Achievements slide in

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Word Choice | A web app for words already said.</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/paper.css">
+    <link rel="stylesheet" href="css/animate.css">
     <meta name="description" content="This digital toy lets you choose your own path, one word at a time.  Let's see how unique your word choices really are.">
     <meta name="keywords" content="app, game, toy, storytelling, internet, English">
     <meta name="author" content="Pius Wong">
