--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
 
-    <header id="flexContainer">
+    <header id="flexContainer" class="fadeIn">
       <div class="infoPrimary">
         <div class="paper-unclickable" id="flexContainer">
           <div class="titleCard">
@@ -48,7 +48,7 @@
       </div>
     </main>
 
-    <footer>
+    <footer class="fadeIn">
       <div>
         <div class="achievements" id="flexContainer">
           <div class="paper-unclickable">Achievements:</div>
