Minified JS files 1/11/17

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <footer class="fadeIn">
       <div>
         <div class="achievements" id="flexContainer">
-          <div class="paper-unclickable">Achievements:</div>
+          <div class="paper-unclickable-noShadow">Achievements:</div>
         </div>
         <div class="scoreContainer" id="flexContainer">
           <div class="scores paper-unclickable">
@@ -61,9 +61,9 @@
       </div>
     </footer>
 
-    <script src="js/jquery-3.1.1.js"></script>
+    <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/words.js"></script>
-    <script src="js/dataBuilder.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/dataBuilder.min.js"></script>
+    <script src="js/main.min.js"></script>
   </body>
 </html>
