--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <div class="infoSecondary" id="flexContainer">
         <div class="paper-unclickable">
-          What's your best sentence? Choose your words, one at a time.
+          What is the best sentence on the web?  Choose your words well.
         </div>
       </div>
       <div class="startOver">
