--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <meta property="og:description" content="This digital toy lets you choose your own path, one word at a time.  Let's see how unique your word choices really are." />
     <meta property="og:image" content="http://www.piuswong.com/wordchoice/img/wordchoice_logo.png" />
     <meta property="fb:app_id" content="227126297744003"; />
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:site" content="wordchoice.piuswong.com" />
+	<meta name="twitter:creator" content="@PiusWong">
+	<meta name="twitter:title" content="Word Choice | A digital toy for words already said" />
+	<meta name="twitter:description" content="Create the best sentence the web has to offer, one word at a time." />
+	<meta name="twitter:image" content="http://www.piuswong.com/wordchoice/img/wordchoice_logo.png" />
     <link href="https://fonts.googleapis.com/css?family=Copse|Crimson+Text" rel="stylesheet" />
   </head>
   <body>
